# rumen

./: .gitignore  README.org  dune-project
.github/workflows/: build.yml
lib/: dune  entries.ml  fetch.ml  generate.ml
scripts/: dune  generate.ml  icons.sh  rumen_cli.ml
src/: app.ml  dune  entry.ml  entry_web.ml  github.ml  sw.ml  workflow.yml
test/: dune  test_rumen_lib.ml
test/data/: 1.html
web/: app.css  dune  index.html  manifest.json
