(lang dune 3.0)

(authors "Puneeth Chaganti <punchagan@muse-amuse.in>")

(maintainers "Puneeth Chaganti <punchagan@muse-amuse.in>")

(license AGPLv3)

(documentation https://github.com/punchagan/rumen)

(source
 (github punchagan/rumen))

(package
 (name rumen)
 ;; TODO: (synopsis "")
 ;; TODO: (description "")
 (allow_empty)
 (depends ocaml brr))
