(rule
 (with-stdout-to
  workflow.ml
  (progn
   ;; workflow.yml
   (echo "let workflow_yml = {yml|")
   (cat assets/workflow.yml)
   (echo "|yml}\n"))))

(executable
 (name sw)
 (modes js)
 (modules sw)
 (libraries brr))

(executable
 (name app)
 (modes js)
 (modules app workflow github entry_web)
 (libraries brr rumen))
